# todoist-api-python

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  question.md
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  publish.yml  test.yml
api/: index.html
api_async/: index.html
authentication/: index.html
changelog/: index.html
docs/: api.md  api_async.md  authentication.md  index.md  models.md
models/: index.html
search/: search_index.json
tests/: conftest.py  test_api.py  test_api_async.py  test_api_async_client.py  test_api_comments.py  test_api_completed_tasks.py  test_api_folders.py  test_api_items.py  test_api_labels.py  test_api_location_reminders.py  test_api_projects.py  test_api_reminders.py  test_api_sections.py  test_api_shared_labels.py  test_api_tasks.py  test_authentication.py  test_headers.py  test_http_headers.py  test_http_requests.py  test_main.py  test_models.py
tests/api/: test_tasks.py
tests/api_async/: test_async_api.py  test_async_tasks.py
tests/data/: quick_add_responses.py  test_defaults.py
tests/utils/: http_mock.py  test_utils.py
todoist/: __init__.py  api.py  headers.py  http_client.py  http_requests.py  main.py  models.py  utils.py
todoist_api_python/: __init__.py  api.py  api_async.py  authentication.py  endpoints.py  headers.py  http_requests.py  main.py  models.py  types.py  utils.py
todoist_api_python/_core/: endpoints.py  http_headers.py  http_requests.py  utils.py
